--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "Closures.js",
   "scripts": {
-    "dev": "ts-node index.ts"
+    "dev": "ts-node index.ts",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,8 @@
     "@types/node": "^15.12.1",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
+  },
+  "devDependencies": {
+    "jest": "^27.0.5"
   }
 }
